// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bootstrap basic table renders properly 1`] = `
<table
  className="table"
>
  <caption>
    Optional table caption.
  </caption>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap bordered table renders properly 1`] = `
<table
  className="table table-bordered"
>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap condensed table renders properly 1`] = `
<table
  className="table table-condensed"
>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap contextual classes table renders properly 1`] = `
<table
  className="table table-condensed"
>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="active"
    >
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr
      className="success"
    >
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        3
      </td>
      <td
        className=""
      >
        Paul
      </td>
      <td
        className=""
      >
        O’Shannessy
      </td>
      <td
        className=""
      >
        zpao
      </td>
    </tr>
    <tr
      className="warning"
    >
      <td
        className=""
      >
        4
      </td>
      <td
        className=""
      >
        Pete
      </td>
      <td
        className=""
      >
        Hunt
      </td>
      <td
        className=""
      >
        petehunt
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        5
      </td>
      <td
        className=""
      >
        Andrew
      </td>
      <td
        className=""
      >
        Clark
      </td>
      <td
        className=""
      >
        acdlite
      </td>
    </tr>
    <tr
      className="danger"
    >
      <td
        className=""
      >
        6
      </td>
      <td
        className=""
      >
        Nathan
      </td>
      <td
        className=""
      >
        Hunzaker
      </td>
      <td
        className=""
      >
        nhunzaker
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap hover table renders properly 1`] = `
<table
  className="table table-hover"
>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap responsive table renders properly 1`] = `
<div
  className="table-responsive"
>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th
          className=""
        >
          #
        </th>
        <th
          className=""
        >
          First Name
        </th>
        <th
          className=""
        >
          Last Name
        </th>
        <th
          className=""
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className=""
        >
          0
        </td>
        <td
          className=""
        >
          Dan
        </td>
        <td
          className=""
        >
          Abramov
        </td>
        <td
          className=""
        >
          gaearon
        </td>
      </tr>
      <tr>
        <td
          className=""
        >
          1
        </td>
        <td
          className=""
        >
          Sebastian
        </td>
        <td
          className=""
        >
          Markbåge
        </td>
        <td
          className=""
        >
          sebmarkbage
        </td>
      </tr>
      <tr>
        <td
          className=""
        >
          2
        </td>
        <td
          className=""
        >
          Sophie
        </td>
        <td
          className=""
        >
          Alpert
        </td>
        <td
          className=""
        >
          sophiebits
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bootstrap striped table renders properly 1`] = `
<table
  className="table table-striped"
>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Patternfly table renders properly 1`] = `
<table
  className="table table-striped table-bordered table-hover"
>
  <thead>
    <tr>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
      <th
        className="text-right"
      >
        Commits
      </th>
      <th
        className="text-right"
      >
        Additions
      </th>
      <th
        className="text-center"
      >
        Location
      </th>
      <th
        className=""
      >
        Gender
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
      <td
        className="text-right"
      >
        711
      </td>
      <td
        className="text-right"
      >
        272635
      </td>
      <td
        className="text-center"
      >
        London, UK
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
      <td
        className="text-right"
      >
        476
      </td>
      <td
        className="text-right"
      >
        203610
      </td>
      <td
        className="text-center"
      >
        San Francisco, CA
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
      <td
        className="text-right"
      >
        828
      </td>
      <td
        className="text-right"
      >
        114467
      </td>
      <td
        className="text-center"
      >
        California
      </td>
      <td
        className=""
      >
        female
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Paul
      </td>
      <td
        className=""
      >
        O’Shannessy
      </td>
      <td
        className=""
      >
        zpao
      </td>
      <td
        className="text-right"
      >
        820
      </td>
      <td
        className="text-right"
      >
        87324
      </td>
      <td
        className="text-center"
      >
        Seattle, WA
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Pete
      </td>
      <td
        className=""
      >
        Hunt
      </td>
      <td
        className=""
      >
        petehunt
      </td>
      <td
        className="text-right"
      >
        205
      </td>
      <td
        className="text-right"
      >
        86685
      </td>
      <td
        className="text-center"
      >
        San Francisco, CA
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Andrew
      </td>
      <td
        className=""
      >
        Clark
      </td>
      <td
        className=""
      >
        acdlite
      </td>
      <td
        className="text-right"
      >
        320
      </td>
      <td
        className="text-right"
      >
        74162
      </td>
      <td
        className="text-center"
      >
        Redwood City, CA
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Nathan
      </td>
      <td
        className=""
      >
        Hunzaker
      </td>
      <td
        className=""
      >
        nhunzaker
      </td>
      <td
        className="text-right"
      >
        77
      </td>
      <td
        className="text-right"
      >
        34504
      </td>
      <td
        className="text-center"
      >
        Durham, NC
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
  </tbody>
</table>
`;
